# mdrc

./: .gitignore  README.md  pyproject.toml
mdrc/: __init__.py  console.py
tests/: test_mdrc.py
