[tool.poetry]
name = "mdrc"
version = "0.1.0"
description = ""
authors = ["JÄgaro Bhikkhu <v.jagaro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
mdrc = "mdrc.console:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
